--- a/package.json
+++ b/package.json
@@ -7,11 +7,15 @@
     },
     "devDependencies": {
         "axios": "^1.7.4",
+        "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^1.0",
         "vite": "^5.0"
     },
     "dependencies": {
         "@fullcalendar/core": "^6.1.15",
-        "@fullcalendar/daygrid": "^6.1.15"
+        "@fullcalendar/daygrid": "^6.1.15",
+        "@fullcalendar/interaction": "^6.1.15",
+        "fullcalendar": "^6.1.15",
+        "jquery": "^3.7.1"
     }
 }
